Updated log handling

--- a/kervi_ui/web/src/app/dashboards/dashboard-section/dashboard-section.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard-section/dashboard-section.component.html
@@ -30,8 +30,8 @@
                 </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let message of messages">
-                        <td></td>
+                    <tr *ngFor="let message of messages$ | async">
+                        <td class="alert" [ngClass]="{'alert-danger': message.level==1, 'alert-warning': message.level==2}">&nbsp;</td>
                         <td>{{message.timestamp | date: 'HH:mm:ss'}}</td>
                         <td>{{message.topic}}</td>
                     </tr>
