--- a/kervi_ui/web/src/styles.scss
+++ b/kervi_ui/web/src/styles.scss
@@ -58,7 +58,8 @@ $border-radius-base: .25rem;
 .sparkline-template{
 	color:#004400;
 	background-color:#55aa55;
-	height:20;
+	height:25px;
+	width:35px;
 	.spot{
 		color:#116611;
 	}
