--- a/kervi_ui/web/src/app/sensors/sensor/sensor.component.html
+++ b/kervi_ui/web/src/app/sensors/sensor/sensor.component.html
@@ -1,26 +1,41 @@
-<div *ngIf="displayType=='value' && size>0" class="sensor-inline sensor-type-value">
-	<i *ngIf="parameters.labelIcon" class="fa fa-{{currentIcon}}"></i>
-	<ng-container *ngIf="parameters.label">{{parameters.label}}:</ng-container>
-	<i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
-	<sensor-sparkline *ngIf="showSparkline" [sensor]="sensor"></sensor-sparkline>
-	<span class="sensor-value">{{(sensor.value$ | async)}}{{sensor.unit}}</span>
-</div>
-
-<div *ngIf="displayType=='value' && size==0 " class="sensor-block sensor-type-value">
-	<div style="display: inline-block" *ngIf="parameters.label">{{parameters.label}}:</div>
-	<div style="display:inline-block; float: right">
+<ng-container *ngIf="sensor.subSensors.length == 0">
+	<div *ngIf="displayType=='value' && size>0" class="sensor-inline sensor-type-value">
+		<i *ngIf="parameters.labelIcon" class="fa fa-{{currentIcon}}"></i>
+		<ng-container *ngIf="parameters.label">{{parameters.label}}:</ng-container>
 		<i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
 		<sensor-sparkline *ngIf="showSparkline" [sensor]="sensor"></sensor-sparkline>
 		<span class="sensor-value">{{(sensor.value$ | async)}}{{sensor.unit}}</span>
 	</div>
-</div>
 
-<ng-container *ngIf="displayType=='gauge'" class="" >
-	<canvas id="{{canvasId}}" class="sensor-canvas" ></canvas>
+	<div *ngIf="displayType=='value' && size==0 " class="sensor-block sensor-type-value">
+		<div style="display: inline-block" *ngIf="parameters.label">{{parameters.label}}:</div>
+		<div style="display:inline-block; float: right">
+			<i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
+			<sensor-sparkline *ngIf="showSparkline" [sensor]="sensor"></sensor-sparkline>
+			<span class="sensor-value">{{(sensor.value$ | async)}}{{sensor.unit}}</span>
+		</div>
+	</div>
+
+	<ng-container *ngIf="displayType=='gauge'" class="" >
+		<canvas id="{{canvasId}}" class="sensor-canvas" ></canvas>
+	</ng-container>
+
+	<ng-container *ngIf="displayType=='chart'" class="" >
+		<div style="width:100%;height:100%">
+		<canvas id="{{canvasId}}" class="sensor-canvas" ></canvas>
+		</div>
+	</ng-container>
 </ng-container>
-
-<ng-container *ngIf="displayType=='chart'" class="" >
-	<div style="width:100%;height:100%">
-	<canvas id="{{canvasId}}" class="sensor-canvas" ></canvas>
+<ng-container *ngIf="sensor.subSensors.length > 0">
+	<div >
+		<div>
+			<i *ngIf="parameters.labelIcon" class="fa fa-{{currentIcon}}"></i>
+			<span *ngIf="parameters.label">{{parameters.label}}:</span>
+		</div>
+		<ng-container *ngFor="let subSensor of sensor.subSensors">
+			<div style="padding-left:15px;clear:both">
+				<kervi-sensor [sensor]="subSensor" ></kervi-sensor>
+			</div>
+		</ng-container>
 	</div>
 </ng-container>
