--- a/kervi_ui/web/src/app/controllers/controller-layout/controller-component.component.html
+++ b/kervi_ui/web/src/app/controllers/controller-layout/controller-component.component.html
@@ -1,21 +1,21 @@
 <ng-container *ngIf="component.visible">
     <ng-container [ngSwitch]="component.type">
-        <template ngSwitchCase="number-input">
+        <template ngSwitchCase="dynamic-number">
             <kervi-controller-number-input [parameters]="parameters" [dashboardSection]="dashboardSection" [input]="component"></kervi-controller-number-input>
         </template>
-        <template ngSwitchCase="text-input">
+        <template ngSwitchCase="dynamic-string">
             <kervi-controller-text-input [parameters]="parameters" [dashboardSection]="dashboardSection" [input]="component"></kervi-controller-text-input>
         </template>
         <template ngSwitchCase="button">
             <kervi-controller-button [dashboardSection]="dashboardSection" [parameters]="parameters" [button]="component"></kervi-controller-button>
         </template>
-        <template ngSwitchCase="switchButton">
+        <template ngSwitchCase="dynamic-boolean">
             <kervi-controller-switchbutton [dashboardSection]="dashboardSection" [parameters]="parameters" [button]="component"></kervi-controller-switchbutton>
         </template>
-        <template ngSwitchCase="select">
+        <template ngSwitchCase="dynamic-enum">
             <kervi-controller-select [dashboardSection]="dashboardSection" [select]="component" [parameters]="parameters"></kervi-controller-select>
         </template>
-        <template ngSwitchCase="datetime-input">
+        <template ngSwitchCase="dynamic-datetime">
             <kervi-controller-datetime [dashboardSection]="dashboardSection" [parameters]="parameters" [datetime]="component"></kervi-controller-datetime>
         </template>
     </ng-container>
