--- a/kervi_ui/web/src/app/controllers/controller/controller.component.html
+++ b/kervi_ui/web/src/app/controllers/controller/controller.component.html
@@ -9,33 +9,30 @@
 		</template>
 		<template ngSwitchDefault>
 			<kervi-cam-viewer *ngIf="controller.type=='camera'" [cameraId]="controller.id"  ></kervi-cam-viewer>
-  			<ng-container *ngFor="let component of controller.components">
+  			<ng-container *ngFor="let component of controller.inputs">
 				<ng-container *ngIf="component.visible">
 					<ng-container [ngSwitch]="component.type">
-						<template ngSwitchCase="number-input">
+						<template ngSwitchCase="dynamic-number">
 							<kervi-controller-number-input [dashboardSection]="dashboardSection" [input]="component"></kervi-controller-number-input>
 						</template>
-						<template ngSwitchCase="text-input">
+						<template ngSwitchCase="dynamic-input">
 							<kervi-controller-text-input [dashboardSection]="dashboardSection" [input]="component"></kervi-controller-text-input>
 						</template>
 						<template ngSwitchCase="button">
 							<kervi-controller-button [dashboardSection]="dashboardSection" [button]="component"></kervi-controller-button>
 						</template>
-						<template ngSwitchCase="switchButton">
+						<template ngSwitchCase="dynamic-boolean">
 							<kervi-controller-switchbutton [dashboardSection]="dashboardSection" [button]="component"></kervi-controller-switchbutton>
 						</template>
-						<template ngSwitchCase="select">
+						<template ngSwitchCase="dynamic-enum">
 							<kervi-controller-select [dashboardSection]="dashboardSection" [select]="component"></kervi-controller-select>
 						</template>
-						<template ngSwitchCase="datetime">
+						<template ngSwitchCase="dynamic-datetime">
 							<kervi-controller-datetime [dashboardSection]="dashboardSection" [datetime]="component"></kervi-controller-datetime>
 						</template>
 					</ng-container>
 				</ng-container>
   			</ng-container>
-
-
 		</template>
-
 	</ng-container>
 </ng-container>
