update dashboard handling

--- a/kervi_ui/web/src/app/dashboards/dashboard-layout/layout-sensor.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard-layout/layout-sensor.component.html
@@ -1,1 +1,1 @@
-<kervi-sensor [dashboardSection]="dashboardSection" [parameters]="parameters" [sensor]="sensor"></kervi-sensor>
+<kervi-sensor [dashboardSection]="dashboardSection" [inline]="inline" [parameters]="parameters" [sensor]="sensor"></kervi-sensor>
