--- a/kervi_ui/web/src/styles.scss
+++ b/kervi_ui/web/src/styles.scss
@@ -38,6 +38,29 @@ $border-radius-base: .25rem;
 	width:100%;
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 25px;
+}
+
+.navbar-light{
+	a.nav-link{
+		color:#ffffff !important;	
+	}
+	
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 25px;
+  background-color: $gray-lightest;
+}
 
 
 .btn-primary-hover
