Update dynamic value handling

--- a/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
 				<input type="hidden" id="left-pad-x" name="left-x" value="0"><input type="hidden" id="left-pad-y" name="left-y" value="0">
 			</fieldset>
 		</div>
-		<div *ngIf="showRightPad" class="right-pad-area" style="position:fixed">
+		<div *ngIf="showRightPad" class="right-pad-area" style="position:fixed" (mousedown)="padPress('right')" (mouseup)="padRelease('right')">
 			<fieldset id="rightPad" style="position:absolute" class="pad" [attr.data-width]="padSize" [attr.data-height]="padSize">
 				<legend></legend>
 				<input id="right-pad-x" type="hidden" name="right-x" value="0"> <input type="hidden" id="right-pad-y" name="right-y" value="0">
