--- a/kervi_ui/web-4/src/app/dashboards/dashboard-section/dashboard-section.component.html
+++ b/kervi_ui/web-4/src/app/dashboards/dashboard-section/dashboard-section.component.html
@@ -5,8 +5,8 @@
         <span style="float:right">{{title}}</span>
         <div class="card-block" *ngIf="headerComponents.length>0" style="float:right;padding:0"    >
             <ng-container *ngFor="let sectionComponent of headerComponents">
-                <!--<controller [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></controller>-->
-                <!--<controller-component [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='controllerComponent'" ></controller-component>-->
+                <kervi-controller [dashboardSection]="section" [controller]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></kervi-controller>
+                <dynamic-value [dashboardSection]="section" [value]="sectionComponent.component" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='DynamicValue'" ></dynamic-value>
                 <kervi-sensor [dashboardSection]="section" [sensor]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></kervi-sensor>
             </ng-container>
         </div>
@@ -14,8 +14,8 @@
     <div id="section-{{section.id}}" role="tabpanel" [ngClass]="{'in': expanded}" class="collapse  {{sectionClassHeight}} " *ngIf="showHeader" style="overflow:auto">
         <div class="card-block" *ngIf="components.length>0" >
             <ng-container *ngFor="let sectionComponent of components">
-                <!--<controller [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></controller>-->
-                <!--<controller-component [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='controllerComponent'" ></controller-component>-->
+                <kervi-controller [dashboardSection]="section" [controller]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></kervi-controller>
+                <dynamic-value [dashboardSection]="section" [value]="sectionComponent.component" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='DynamicValue'" ></dynamic-value>
                 <kervi-sensor [dashboardSection]="section" [sensor]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></kervi-sensor>
             </ng-container>
         </div>
@@ -47,8 +47,8 @@
     
     <div class="card-block {{sectionClassHeight}} " *ngIf="!showHeader" style="overflow:auto">
         <ng-container *ngFor="let sectionComponent of components">
-            <!--<controller [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></controller>-->
-            <!--<controller-component [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='controllerComponent'" ></controller-component>-->
+            <kervi-controller [dashboardSection]="section" [controller]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></kervi-controller>
+            <dynamic-value [dashboardSection]="section" [value]="sectionComponent.component" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='DynamicValue'" ></dynamic-value>
             <kervi-sensor [dashboardSection]="section" [sensor]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></kervi-sensor>
         </ng-container>
     </div>
@@ -57,8 +57,8 @@
 
 <ng-template [ngIf]="inline && section.components.length>0" style="display:inline-block">
         <ng-container *ngFor="let sectionComponent of section.components" style="display:inline-block">
-            <!--<controller [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></controller>-->
-            <!--<controller-component [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='controllerComponent'" ></controller-component>-->
+            <kervi-controller [dashboardSection]="section" [controller]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></kervi-controller>
+            <dynamic-value [dashboardSection]="section" [value]="sectionComponent.component" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='DynamicValue'" ></dynamic-value>
             <kervi-sensor [dashboardSection]="section" [inline]="true" [sensor]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></kervi-sensor>
         </ng-container>
 </ng-template>
