--- a/kervi_ui/web-4/src/app/ui-components/slider/slider.component.html
+++ b/kervi_ui/web-4/src/app/ui-components/slider/slider.component.html
@@ -1,2 +1,2 @@
-<input style="display:table-cell" class="form-control" [style.width.%]="parameters.inputSize"/>
-<span style="display:table-cell" [style.width.%]="parameters.valueSize" [style.max-width.%]="parameters.valueSize" class="slider-value">{{(value.value$ | async)}}</span>
+<input style="display:table-cell" class="form-control" />
+<span style="display:inline-block"  class="slider-value">{{(value.value$ | async)}}</span>
