--- a/kervi_ui/web-4/src/app/values/number-value/number-value.component.html
+++ b/kervi_ui/web-4/src/app/values/number-value/number-value.component.html
@@ -1,18 +1,19 @@
 <div *ngIf="input.isInput" [ngClass]="{'block-component':parameters.size==0 && !parameters.inline}" style="display:table;width:100%"> 
-    <span style="display:table-cell"  *ngIf="parameters.labelIcon" class="fa fa-{{parameters.labelIcon}}"></span>
-    <span style="display:table-cell"  *ngIf="parameters.label"  >{{parameters.label}}</span>
+    <span style="display:inline"  *ngIf="parameters.labelIcon" class="fa fa-{{parameters.labelIcon}}"></span>
+    <span style="display:inline"  *ngIf="parameters.label"  >{{parameters.label}}</span>
 	
-    <ui-slider [value]="input" [parameters]="parameters"></ui-slider>
-	
+    <div style="display:inline-block" [style.width.%]="parameters.valueSize" [style.max-width.%]="parameters.valueSize">
+        <ui-slider [value]="input" [parameters]="parameters"></ui-slider>
+	</div>
 </div>
 
-<div *ngIf="!input.isInput && displayType=='value' && (size>0 || inline)" class="input-inline input-type-value">
+<span *ngIf="!input.isInput && displayType=='value' && (size>0 || inline)" class="input-inline input-type-value">
 		<i *ngIf="parameters.labelIcon" class="fa fa-{{currentIcon}}"></i>
 		<ng-container *ngIf="parameters.label">{{parameters.label}}:</ng-container>
 		<i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
 		<value-sparkline *ngIf="parameters.showSparkline" [value]="input"></value-sparkline>
 		<span class="input-value">{{(input.value$ | async)}}{{input.unit}}</span>
-</div>
+</span>
 
 <div *ngIf="!input.isInput && displayType=='value' && size==0 && !inline " class="input-block input-type-value">
     <div style="display: inline-block" *ngIf="parameters.label">{{parameters.label}}:</div>
