--- a/kervi_ui/web-4/src/app/dashboards/dashboard-section/dashboard-section.component.html
+++ b/kervi_ui/web-4/src/app/dashboards/dashboard-section/dashboard-section.component.html
@@ -1,15 +1,16 @@
 <div *ngIf="!inline" [ngClass]="{'has-card-header': showHeader}"  class="card {{sectionClassWidth}}">
     <div class="card-header" *ngIf="showHeader">
-        
-        <a data-toggle="collapse" role="tab" href="#section-{{section.id}}" [attr.aria-expanded]="expanded" aria-control="" style="float:left"> <i class="fa fa-chevron-right" aria-hidden="true"></i> </a>
-        <span style="float:right">{{title}}</span>
-        <div class="card-block" *ngIf="headerComponents.length>0" style="float:right;padding:0"    >
-            <ng-container *ngFor="let sectionComponent of headerComponents">
-                <kervi-controller [dashboardSection]="section" [controller]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></kervi-controller>
-                <dynamic-value [dashboardSection]="section" [value]="sectionComponent.component" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='DynamicValue'" ></dynamic-value>
-                <kervi-sensor [dashboardSection]="section" [sensor]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></kervi-sensor>
-            </ng-container>
-        </div>
+        <h4 class="text-right">
+            &nbsp;{{title}}
+            <a data-toggle="collapse" role="tab" href="#section-{{section.id}}" [attr.aria-expanded]="expanded" aria-control="" style="float:left"> <i class="fa fa-chevron-right" aria-hidden="true"></i> </a>
+            <div class="card-block" *ngIf="headerComponents.length>0" style="float:right;padding:0"    >
+                <ng-container *ngFor="let sectionComponent of headerComponents">
+                    <kervi-controller [dashboardSection]="section" [controller]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></kervi-controller>
+                    <dynamic-value [dashboardSection]="section" [value]="sectionComponent.component" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='DynamicValue'" ></dynamic-value>
+                    <kervi-sensor [dashboardSection]="section" [sensor]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></kervi-sensor>
+                </ng-container>
+            </div>
+        </h4>
   </div>
     <div id="section-{{section.id}}" role="tabpanel" [ngClass]="{'in': expanded}" class="collapse  {{sectionClassHeight}} " *ngIf="showHeader" style="overflow:auto">
         <div class="card-block" *ngIf="components.length>0" >
@@ -54,11 +55,10 @@
     </div>
     
 </div>
-
 <ng-template [ngIf]="inline && section.components.length>0" style="display:inline-block">
         <ng-container *ngFor="let sectionComponent of section.components" style="display:inline-block">
             <kervi-controller [dashboardSection]="section" [controller]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></kervi-controller>
-            <dynamic-value [dashboardSection]="section" [value]="sectionComponent.component" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='DynamicValue'" ></dynamic-value>
-            <kervi-sensor [dashboardSection]="section" [inline]="true" [sensor]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></kervi-sensor>
+            <dynamic-value [dashboardSection]="section" [inline]="inline" [value]="sectionComponent.component" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='DynamicValue'" ></dynamic-value>
+            <kervi-sensor [dashboardSection]="section" [inline]="inline" [sensor]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></kervi-sensor>
         </ng-container>
 </ng-template>
