--- a/kervi_ui/web-4/src/app/ui-components/switch-button/switch-button.component.html
+++ b/kervi_ui/web-4/src/app/ui-components/switch-button/switch-button.component.html
@@ -1,10 +1,14 @@
-<div *ngIf="parameters.size==0 && !parameters.inline" class="block-component"> 
+<div *ngIf="parameters.size==0 && ! (parameters.inline || inline)" class="block-component"> 
     <span  *ngIf="parameters.labelIcon" class="fa fa-{{parameters.labelIcon}}"></span>
-    <span  *ngIf="parameters.label"  >{{parameters.label}}</span>
-    <input class="pull-right" [style.width.%]="parameters.inputSize" type="checkbox" [attr.checked]="(button.state$ | async) ? '' : null" data-toggle="toggle">
+    <span  *ngIf="parameters.label"  >y{{parameters.label}}</span>
+    <div class="can-toggle pull-right" [style.width.%]="parameters.inputSize">
+        <input id="a" class=""  type="checkbox" [attr.checked]="state ? '' : null" >
+        <label for="a">
+            <div class="can-toggle__switch" data-checked="On" data-unchecked="Off"></div>
+        </label>
 </div>
-<span *ngIf="parameters.size>0 || parameters.inline">
+<div *ngIf="parameters.size>0 || parameters.inline || inline" style="display:inline">
     <span  *ngIf="parameters.labelIcon" class="fa fa-{{parameters.labelIcon}}"></span>
-    <label *ngIf="parameters.label" >{{paramers.label}}</label>
-    <input type="checkbox" [style.width.%]="parameters.inputSize" [attr.checked]="(button.state$ | async) ? '' : null" data-toggle="toggle">
-</span>
+    <span *ngIf="parameters.label" >x{{parameters.label}}</span>
+    <input class="can-toggle" type="checkbox" [style.width.%]="parameters.inputSize" [attr.checked]="state ? '' : null" data-toggle="toggle">
+</div>
