--- a/kervi_ui/web-4/src/app/values/boolean-value/boolean-value.component.html
+++ b/kervi_ui/web-4/src/app/values/boolean-value/boolean-value.component.html
@@ -1,2 +1,2 @@
-<kervi-button [value]="value" [parameters]="parameters" *ngIf="displayType=='button'"></kervi-button>
-<kervi-switchbutton [value]="value" [parameters]="parameters" *ngIf="displayType=='switch_button'"></kervi-switchbutton>
+<kervi-button [value]="value" [inline]="inline" [parameters]="parameters" *ngIf="displayType=='button'"></kervi-button>
+<kervi-switchbutton [inline]="inline" [value]="value" [parameters]="parameters" *ngIf="displayType!='button'"></kervi-switchbutton>
