--- a/kervi_ui/web-4/src/app/ui-components/button/button.component.html
+++ b/kervi_ui/web-4/src/app/ui-components/button/button.component.html
@@ -1,17 +1,9 @@
-<div *ngIf="parameters.size==0 && !inline" class="block-component"> 
-    <span  *ngIf="parameters.labelIcon" class="fa fa-{{parameters.labelIcon}}"></span>
-    <span  *ngIf="parameters.label"  >{{parameters.label}}</span>
-    <a class="btn btn-primary pull-right" [ngClass]="{'btn-primary-hover': (value.value$ | async)}" [style.width.%]="parameters.inputSize"  (mousedown)="press()" (mouseup)="release()" [attr.title]="value.name">
-        <i *ngIf="parameters.buttonIcon" class='fa fa-{{parameters.buttonIcon}}'></i>
-        <ng-container *ngIf="parameters.buttonText" >{{ parameters.buttonText}}</ng-container>
-    </a>
-</div>
+<a *ngIf="!inline" class="btn btn-primary pull-right" style="width:100%" [ngClass]="{'btn-primary-hover': (value.value$ | async)}" (mousedown)="press()" (mouseup)="release()" [attr.title]="value.name">
+    <i *ngIf="parameters.buttonIcon" class='fa fa-{{parameters.buttonIcon}}'></i>
+    <ng-container *ngIf="parameters.buttonText" >{{ parameters.buttonText}}</ng-container>
+</a>
 
-<span *ngIf="parameters.size>0 || inline"> 
-    <span  *ngIf="parameters.labelIcon" class="fa fa-{{parameters.labelIcon}}"></span>
-    <span  *ngIf="parameters.label"  >{{parameters.label}}</span>
-    <a class="btn btn-primary" [ngClass]="{'btn-primary-hover': (value.value$ | async)}"  (mousedown)="press()" (mouseup)="release()" [attr.title]="value.name">
-        <i *ngIf="parameters.buttonIcon" class='fa fa-{{parameters.buttonIcon}}'></i>
-        <ng-container *ngIf="parameters.buttonText" >{{ parameters.buttonText}}</ng-container>
-    </a>
-</span>
+<a *ngIf="inline" class="btn btn-primary" [ngClass]="{'btn-primary-hover': (value.value$ | async)}" (mousedown)="press()" (mouseup)="release()" [attr.title]="value.name">
+    <i *ngIf="parameters.buttonIcon" class='fa fa-{{parameters.buttonIcon}}'></i>
+    <ng-container *ngIf="parameters.buttonText" >{{ parameters.buttonText}}</ng-container>
+</a>
