--- a/kervi_ui/web-4/src/app/values/number-value/number-value.component.html
+++ b/kervi_ui/web-4/src/app/values/number-value/number-value.component.html
@@ -1,28 +1,29 @@
-<div *ngIf="input.isInput && !inline" class="block-component" style="display:table;width:100%"> 
-    <div style="display:inline-block" [style.width.%]="100 - parameters.inputSize - parameters.valueSize " [style.max-width.%]="parameters.inputSize - parameters.valueSize">
-        <span style="display:inline"  *ngIf="parameters.labelIcon" class="fa fa-{{parameters.labelIcon}}"></span>
-        <span style="display:inline"  *ngIf="parameters.label"  >{{parameters.label}}</span>
+<div *ngIf="displayType=='slider' && !inline" class="block-component" style="vertical-align:middle;display:table;width:100%"> 
+    <div style="display:inline-block" [style.width.%]="100 - parameters.inputSize - parameters.valueSize" [style.max-width.%]="100 - parameters.inputSize - parameters.valueSize">
+        <span   *ngIf="parameters.labelIcon" class="fa fa-{{parameters.labelIcon}}"></span>
+        <span   *ngIf="parameters.label">{{parameters.label}}</span>
 	</div>
     <div style="display:inline-block" [style.width.%]="parameters.inputSize" [style.max-width.%]="parameters.inputSize">
         <ui-slider [value]="input" [parameters]="parameters"></ui-slider>
-        
 	</div>
-    <span style="display:inline-block" [style.width.%]="parameters.valueSize" [style.max-width.%]="parameters.valueSize"    class="slider-value">{{(input.value$ | async)}}</span>
+    <div style="display:inline;float:right" [style.width.%]="parameters.valueSize" [style.max-width.%]="parameters.valueSize"    class="slider-value">
+        <span>{{(input.value$ | async)}}</span>
+    </div>
+    
 </div>
 
-<div *ngIf="input.isInput && inline" class="inline-component"> 
+<div *ngIf="displayType=='slider' && inline" class="inline-component"> 
     <div style="display:inline-block">
         <span style="display:inline"  *ngIf="parameters.labelIcon" class="fa fa-{{parameters.labelIcon}}"></span>
         <span style="display:inline"  *ngIf="parameters.label"  >{{parameters.label}}</span>
 	</div>
-    <div style="display:inline-block" [style.width.%]="parameters.inputSize" [style.max-width.%]="parameters.inputSize">
+    <div style="display:inline-block" class="slider-inline"  [style.max-width.%]="parameters.inputSize">
         <ui-slider [value]="input" [parameters]="parameters"></ui-slider>
-        
 	</div>
-    <span style="display:inline-block" [style.width.%]="parameters.valueSize" [style.max-width.%]="parameters.valueSize"    class="slider-value">{{(input.value$ | async)}}</span>
+    <span style="display:inline"  [style.max-width.%]="parameters.valueSize"    class="slider-value">{{(input.value$ | async)}}</span>
 </div>
 
-<span *ngIf="!input.isInput && displayType=='value' && inline" class="input-inline input-type-value">
+<span *ngIf="displayType=='value' && inline" class="input-inline input-type-value">
 		<i *ngIf="parameters.labelIcon" class="fa fa-{{currentIcon}}"></i>
 		<ng-container *ngIf="parameters.label">{{parameters.label}}:</ng-container>
 		<i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
@@ -30,7 +31,7 @@
 		<span class="input-value">{{(input.value$ | async)}}{{input.unit}}</span>
 </span>
 
-<div *ngIf="!input.isInput && displayType=='value' && !inline" class="input-block input-type-value">
+<div *ngIf="displayType=='value' && !inline" class="input-block input-type-value">
     <div style="display: inline-block" *ngIf="parameters.label">{{parameters.label}}:</div>
     <div style="display:inline-block; float: right">
         <i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
@@ -39,10 +40,10 @@
     </div>
 </div>
 
-<ng-container *ngIf="!input.isInput && displayType=='gauge'" class="" >
+<ng-container *ngIf="displayType=='gauge'" class="" >
     <kervi-gauge [value]="input" [parameters]="parameters" [type]="gaugeType" [size]="size"></kervi-gauge>    
 </ng-container>
 
-<ng-container *ngIf="!input.isInput && displayType=='chart'" class="" >
+<ng-container *ngIf="displayType=='chart'" class="" >
     <kervi-chart [value]="input" [parameters]="parameters" [size]="size" ></kervi-chart>
 </ng-container>
