Fixed gauge issues

--- a/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
 			</div>
 		</li>
 		<li class="nav-item" *ngIf="showSectionController">
-			<a style="padding-top:0; display:inline-block" class="nav-link btn btn-default" (click)="dashboardSectionsHidden = !dashboardSectionsHidden;"><i class="fa fa-sliders fa-lg" aria-hidden="true"></i>{{dashboardSectionsVisible}}</a>
+			<a style="padding-top:0; display:inline-block" class="nav-link btn" (click)="dashboardSectionsHidden = !dashboardSectionsHidden;"><i class="fa fa-sliders fa-lg" aria-hidden="true"></i>{{dashboardSectionsVisible}}</a>
 		</li>
 		<li *ngIf="dashboard" style="display:inline-block">&nbsp;&nbsp;&nbsp;{{dashboard.name}}</li>
 	</ul>
