--- a/kervi_ui/web/src/app/connect/connect.component.html
+++ b/kervi_ui/web/src/app/connect/connect.component.html
@@ -1,40 +1,31 @@
-<div *ngIf="doAuthenticate() && !isAuthenticated()">
-
-  <form [formGroup]="loginForm"  
+<div *ngIf="doAuthenticate() && !isAuthenticated()" style="line-height: 1;width:266px;height:200px;background:rgba(255,255,255,0);border-radius: 4px;position: absolute; top:40%;left:50%;margin: -133px 0 0 -128px;padding:10px">
+  <form class="form" [formGroup]="loginForm"  
         (ngSubmit)="onSubmit(loginForm.value)"  
         class="form"  
         [class.error]="!loginForm.valid && loginForm.touched">
  
-    <div class="field"  
+    <div class="form-group"  
         [class.error]="!userName.valid && userName.touched">  
-      <label for="userNameInput">User name</label>  
+      <!--<label class="control-label" for="userNameInput">User name</label>  -->
       <input type="text"  
              id="userNameInput"  
              placeholder="User name"  
-             [formControl]="userName">  
-       <div *ngIf="!userName.valid"  
-         class="ui error message">User name is invalid</div>  
-       <div *ngIf="userName.hasError('required')"  
-         class="ui error message">user name is required</div>  
+             [formControl]="userName"
+             class="form-control">  
+         
     </div>
 
-    <div class="field"  
-        [class.error]="!password.valid && password.touched">  
-      <label for="passwordInput">Password</label>  
+    <div class="form-group"  [class.error]="!password.valid && password.touched">  
+      <!--<label class="control-label" for="passwordInput">Password</label>  -->
       <input type="text"  
              id="passwordInput"  
-             placeholder="Passowrd"  
-             [formControl]="password">  
-       <div *ngIf="!password.valid"  
-         class="ui error message">Password is invalid</div>  
-       <div *ngIf="password.hasError('required')"  
-         class="ui error message">Password is required</div>  
+             placeholder="Password"  
+             [formControl]="password"
+             class="form-control">  
     </div>
+    <div *ngIf="invalidUser" class="ui error message"><p>Invalid user name or password</p></div>
  
-    <div *ngIf="!loginForm.valid"  
-      class="ui error message">Form is invalid</div>
- 
-    <button type="submit" class="ui button">Submit</button>  
+    <button type="submit" class="btn btn-primary">Log on</button>  
   </form>  
 
 
