Add logoff menu item

--- a/kervi_ui/web/src/app/connect/connect.component.html
+++ b/kervi_ui/web/src/app/connect/connect.component.html
@@ -17,7 +17,7 @@
 
     <div class="form-group"  [class.error]="!password.valid && password.touched">  
       <!--<label class="control-label" for="passwordInput">Password</label>  -->
-      <input type="text"  
+      <input type="password"  
              id="passwordInput"  
              placeholder="Password"  
              [formControl]="password"
