--- a/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
@@ -7,13 +7,8 @@
 				<div class="dropdown-submenu">
 					<a *ngFor="let dashboard of (dashboards$ | async)" class="dropdown-item" [routerLink]="['/dashboard', dashboard.id]">{{dashboard.name}}</a>
 					<div *ngIf="authenticated" class="dropdown-divider"></div>
-					<a *ngIf="authenticated" class="dropdown-item" >Log out</a>
+					<a *ngIf="authenticated" href="#" (click)="logoff()" class="dropdown-item" >Log out</a>
 				</div>
-				
-				<!--<div class="dropdown-divider"></div>-->
-				<!--<a class="dropdown-item" href="#/charts">Charts</a>-->
-				<!--<a class="dropdown-item" href="#/about">About</a>-->
-				<!--<a class="dropdown-item" href="#/settings">Settings</a>-->
 			</div>
 		</li>
 		<li class="nav-item" *ngIf="showSectionController">
